repository/yamls/svc/lb_argocd.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    meta.helm.sh/release-name: argocd
    meta.helm.sh/release-namespace: cicd
  creationTimestamp: "2022-09-05T17:51:24Z"
  labels:
    app.kubernetes.io/component: server
    app.kubernetes.io/instance: argocd
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: argocd-server
    app.kubernetes.io/part-of: argocd
    helm.sh/chart: argo-cd-5.4.0
  name: argocd-server
  namespace: cicd
  resourceVersion: "1298"
  uid: 90223fa4-e8d0-441c-ad85-047f1db1ee59
spec:
  allocateLoadBalancerNodePorts: true
  clusterIP: 10.104.219.229
  clusterIPs:
  - 10.104.219.229
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    nodePort: 30033
    port: 81
    protocol: TCP
    targetPort: server
  - name: https
    nodePort: 30283
    port: 443
    protocol: TCP
    targetPort: server
  selector:
    app.kubernetes.io/instance: argocd
    app.kubernetes.io/name: argocd-server
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer:
    ingress:
    - ip: 127.0.0.1
