repository/yamls/svc/lb_minio.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"app.kubernetes.io/instance":"minio-operator","app.kubernetes.io/managed-by":"Helm","app.kubernetes.io/name":"minio-operator","app.kubernetes.io/version":"v4.3.7","argocd.argoproj.io/instance":"minio-operator","helm.sh/chart":"minio-operator-4.3.7"},"name":"console","namespace":"deepstorage"},"spec":{"ports":[{"name":"http","port":9090},{"name":"https","port":9443}],"selector":{"app.kubernetes.io/instance":"minio-op [...]
  creationTimestamp: "2022-09-05T23:16:53Z"
  labels:
    app.kubernetes.io/instance: minio-operator
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: minio-operator
    app.kubernetes.io/version: v4.3.7
    argocd.argoproj.io/instance: minio-operator
    helm.sh/chart: minio-operator-4.3.7
  name: console
  namespace: deepstorage
  resourceVersion: "20533"
  uid: 5cbe752d-3495-4700-b683-f33c46a72672
spec:
  allocateLoadBalancerNodePorts: true
  clusterIP: 10.96.171.164
  clusterIPs:
  - 10.96.171.164
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    nodePort: 32321
    port: 9090
    protocol: TCP
    targetPort: 9090
  - name: https
    nodePort: 32395
    port: 9443
    protocol: TCP
    targetPort: 9443
  selector:
    app.kubernetes.io/instance: minio-operator-console
    app.kubernetes.io/name: minio-operator
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer:
    ingress:
    - ip: 127.0.0.1
