repository/yamls/svc/svc_lb_argocd_ui.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-lb-argocd-ui
  namespace: cicd
spec:
  type: LoadBalancer
  ports:
  - port: 8282
    targetPort: 80
  selector:
    app: argocd-server
