repository/yamls/svc/svc_lb_hello-world.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-lb-hello-world
  namespace: example
  labels:
    app.kubernetes.io/instance: hello-world
    app.kubernetes.io/name: hello-world
    argocd.argoproj.io/instance: hello-world
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 8688
    protocol: TCP
    targetPort: http
    targetPort: 80
  selector:
    app.kubernetes.io/instance: hello-world
    app.kubernetes.io/name: hello-world
