repository/yamls/svc/svc_lb_kong-kong-proxy.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-lb-minio-minio
  namespace: deepstorage
spec:
  type: LoadBalancer
  ports:
  - port: 8685
    targetPort: 80
  selector:
     app.kubernetes.io/instance: kong
     app.kubernetes.io/name: kong
