repository/yamls/svc/svc_lb_minio.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    v1.min.io/tenant: kappastorage
  name: minio
  namespace: deepstorage
  ownerReferences:
  - apiVersion: minio.min.io/v2
    blockOwnerDeletion: true
    controller: true
    kind: Tenant
    name: kappastorage
spec:
  allocateLoadBalancerNodePorts: true
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http-minio
    port: 8686
    protocol: TCP
    targetPort: 9000
  selector:
    v1.min.io/tenant: kappastorage
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer: {}
