repository/yamls/svc/svc_lb_minio_ui.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-lb-minio-ui
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-tcp-idle-timeout: "20"
  namespace: deepstorage
spec:
  type: LoadBalancer
  ports:
  - port: 9090
    targetPort: 9090
  selector:
#     app.kubernetes.io/instance: minio-operator-console
#     app.kubernetes.io/name: minio-operator
     app.kubernetes.io/instance: minio-operator-console
     app.kubernetes.io/name: operator
