repository/yamls/svc/svc_lb_mssql.yaml

apiVersion: v1
kind: Service
metadata:
  name: svc-lb-mssql
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-tcp-idle-timeout: "20"
  namespace: database
spec:
  type: LoadBalancer
  ports:
  - port: 1433
    targetPort: 1433
  selector:
    app: mssql
