repository/yamls/svc/svc_lb_mysql.yaml

apiVersion: v1
kind: Service
metadata:
  name: svc-lb-mysql
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-tcp-idle-timeout: "20"
  namespace: database
spec:
  type: LoadBalancer
  ports:
  - port: 3306
    targetPort: 3306
  selector:
     app.kubernetes.io/instance: mysql
     app.kubernetes.io/name: mysql
