repository/yamls/svc/svc_lb_postgres.yaml

apiVersion: v1
kind: Service
metadata:
  name: svc-lb-postgresql
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-tcp-idle-timeout: "20"
  namespace: database
spec:
  type: LoadBalancer
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    app.kubernetes.io/instance: postgres
